{
    "name": "PlayerInputAction",
    "maps": [
        {
            "name": "Playermovement",
            "id": "cf030d29-6b2c-409c-a9a1-8c46dca18fe0",
            "actions": [
                {
                    "name": "movement",
                    "type": "PassThrough",
                    "id": "e5c3e372-e7e7-4249-a9e6-5c64d61bd5e2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "jump",
                    "type": "PassThrough",
                    "id": "f14a2511-be8f-4102-9189-7a9b2146484f",
                    "expectedControlType": "Integer",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "7c2a0aa6-e1cf-432a-a87c-aa0860073503",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "de71ee8a-5078-494d-8d23-2c2c1f943fb5",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "c644e4bd-1f9f-4ba3-b7e9-89cc41228140",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "38f7f126-dc55-4d14-b934-8529d24578c0",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "017d06e7-43b4-4bb8-ba31-935831bfe3a4",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "5e4a6a89-f3e3-4a67-8657-f482c6ae0fd3",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerAction",
            "id": "6c6da914-6b81-43db-b44b-f7cf2444b8cb",
            "actions": [
                {
                    "name": "New action",
                    "type": "Button",
                    "id": "cd4e09ac-f4ac-455f-9e2d-96510f49a602",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "eda9cba6-5ac0-4d64-a7c8-1d188e645162",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "New action",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}